--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -2,7 +2,7 @@ DEFAULT_HOST!=../default-host.sh
 HOST?=DEFAULT_HOST
 HOSTARCH!=../target-triplet-to-arch.sh $(HOST)
 
-CFLAGS?=-O2 -g
+CFLAGS?=-Og -g
 CPPFLAGS?=
 LDFLAGS?=
 LIBS?=
@@ -29,7 +29,7 @@ LIBS:=$(LIBS) $(KERNEL_ARCH_LIBS)
 
 KERNEL_OBJS=\
 $(KERNEL_ARCH_OBJS) \
-kernel/kernel.o \
+kernel/kernel.o
 
 OBJS=\
 $(ARCHDIR)/crti.o \
