--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -6,3 +6,7 @@ KERNEL_ARCH_LIBS=
 KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/boot.o \
 $(ARCHDIR)/tty.o \
+$(ARCHDIR)/mm/vmm.o \
+$(ARCHDIR)/mm/pmm.o \
+$(ARCHDIR)/mm/heap.o \
+$(ARCHDIR)/gdt.o \
